Fixed bug where calculated total wasn't being displayed + imposed restriction on number of digits that user can input to avoid display overflow

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color: black;
+    background-color: rgb(214, 151, 91);
     height: 100%;
     margin: 0;
     padding: 0;
@@ -14,6 +14,7 @@ body {
 
 .calculator {
     background-color: white;
+    border: 2px solid black;
     border-radius: 45px;
     display: flex;
     flex-direction: column;
@@ -109,6 +110,6 @@ body {
     width: 50%;
 }
 
-.calc-bottom :last-child {
+#clear-button {
     background-color: lightseagreen;
 }
